[package]
name = "readwrite"
version = "0.2.0"
authors = ["Vitaly \"_Vi\" Shukela <vi0oss@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vi/readwrite"
description = "Combine Read and Write into a single Read+Write object"
readme = "README.md"
categories = []
keywords = ["read","write","combine","socket"]
edition="2018"

[dependencies]
tokio_dep = {version = "1", optional = true, package="tokio" }
futures = {version = "0.3", optional = true }
pin-project-lite = { version = "0.2.6", optional = true }

[features]
default = []
tokio = ["tokio_dep", "pin-project-lite"]
asyncstd = ["futures", "pin-project-lite"]

[package.metadata.docs.rs]
features = [ "tokio", "asyncstd" ]

